--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div style="background-color: bisque; text-align: center; padding: 15px">
       <img
-        src="C:\Users\39772\Desktop\face.png"
+        src="https://github.com/yuanlilong/ryan1/blob/main/face.png?raw=true"
         alt="ysl"
         width="80px"
         height="80px"
@@ -37,8 +37,8 @@
       </p>
 
       <img
-        src="C:\Users\39772\Desktop\aoff2.jpg"
-        alt="ysl"
+        src="https://github.com/yuanlilong/ryan1/blob/main/aoff2.jpg?raw=true"
+        alt="aoff"
         width="240px"
         height="180px"
         style="display: block; margin: auto"
