--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div style="background-color: bisque; text-align: center; padding: 15px">
       <img
-        src="https://github.com/yuanlilong/ryan1/blob/main/face.png"
+        src="https://github.com/yuanlilong/ryan1/blob/main/face.png?raw=true"
         alt="ysl"
         width="80px"
         height="80px"
@@ -37,7 +37,7 @@
       </p>
 
       <img
-        src="https://github.com/yuanlilong/ryan1/blob/main/aoff2.jpg"
+        src="https://github.com/yuanlilong/ryan1/blob/main/aoff2.jpg?raw=true"
         alt="aoff"
         width="240px"
         height="180px"
@@ -60,14 +60,14 @@
       <!-- 使用 flexbox 布局来让图片并排 -->
       <div style="display: flex; justify-content: center; align-items: center">
         <img
-          src="https://github.com/yuanlilong/ryan1/blob/main/circos.png"
+          src="https://github.com/yuanlilong/ryan1/blob/main/circos.png?raw=true"
           alt="circos"
           width="240px"
           height="240px"
           style="margin: 10px"
         />
         <img
-          src="https://github.com/yuanlilong/ryan1/blob/main/%E8%BF%9B%E5%8C%96%E6%A0%91.png"
+          src="https://github.com/yuanlilong/ryan1/blob/main/%E8%BF%9B%E5%8C%96%E6%A0%91.png?raw=true"
           alt="进化树"
           width="400px"
           height="240px"
