--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       "
     >
       <p>高良姜 Alpinia officinarum</p>
-      <a href="https://cbi.gxu.edu.cn/download_files/AlpiniaOfficinarum/Ao_final.fasta"
+      <a href="https://cbi.gxu.edu.cn"
         >高良姜基因组链接</a
       >
     </div>
