--- a/index.html
+++ b/index.html
@@ -95,7 +95,11 @@
       <p>高良姜 Alpinia officinarum</p>
       <a href="https://cbi.gxu.edu.cn"
         >高良姜基因组链接</a
-      >
+      > <br /><br /> <!-- 添加空行用于分隔 -->
+  <!-- 添加PDF简历下载链接 -->
+  <a href="https://github.com/yuanlilong/ryan1/blob/main/%E8%A2%81%E5%97%A3%E9%9A%86%E7%A7%8B%E6%8B%9B%E7%AE%80%E5%8E%86.pdf" download="Leslie-Ryan-Resume.pdf"
+    >点击下载我的PDF简历</a
+  >
     </div>
   </body>
 </html>
