--- a/index.html
+++ b/index.html
@@ -15,6 +15,29 @@
           height: auto; /* 保持图片的纵横比 */
         }
       }
+
+      /* 固定音乐播放器控制区 */
+      .music-controls {
+        position: fixed;
+        left: 10px;
+        top: 50%;
+        transform: translateY(-50%);
+        background-color: bisque;
+        padding: 15px;
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        z-index: 1000;
+      }
+
+      /* 按钮和选择框样式 */
+      .music-controls button,
+      .music-controls select {
+        display: block;
+        margin: 10px 0;
+        width: 100%;
+        padding: 10px;
+        font-size: 14px;
+      }
     </style>
   </head>
   <body>
@@ -37,16 +60,10 @@
         text-align: center;
       "
     >
-      <p
-        style="
-          text-indent: 2em;
-          font-family: 'KaiTi', 'Times New Roman', serif;
-          text-align: left;
-        "
-      >
-        高良姜(Alpinia officinarum)为姜科植物，是益智仁属的模式种之一。高良姜原产于中国，其在中国国内分布于广东、海南、广西、福建等省份。高良姜在东南亚地区被用作食品香料和添加剂，它在传统的医学治疗中也被广泛应用。例如在传统的中药中，高良姜被用于缓解胃疼、感冒和止吐。在最近的研究中，高良姜已被多项研究鉴定并且报道了其药理作用，如抗炎、抗氧化、抗菌活性、抗癌、舒张血管以及抗高血脂作用。然而，前期对于高良姜的研究仅仅集中在对其的化学成分进行分析，研究其的药代动力学和药理学。对高良姜基因组方面的研究却很少。
+      <p style="text-indent: 2em; text-align: left">
+        高良姜(Alpinia
+        officinarum)为姜科植物，是益智仁属的模式种之一。高良姜原产于中国，其在中国国内分布于广东、海南、广西、福建等省份。高良姜在东南亚地区被用作食品香料和添加剂，它在传统的医学治疗中也被广泛应用。例如在传统的中药中，高良姜被用于缓解胃疼、感冒和止吐。在最近的研究中，高良姜已被多项研究鉴定并且报道了其药理作用，如抗炎、抗氧化、抗菌活性、抗癌、舒张血管以及抗高血脂作用。然而，前期对于高良姜的研究仅仅集中在对其的化学成分进行分析，研究其的药代动力学和药理学。对高良姜基因组方面的研究却很少。
       </p>
-
       <img
         src="https://github.com/yuanlilong/ryan1/blob/main/files/aoff2.jpg?raw=true"
         alt="aoff"
@@ -54,19 +71,15 @@
         height="180px"
         style="display: block; margin: auto"
       />
-
-      <p
-        style="
-          text-indent: 2em;
-          font-family: 'KaiTi', 'Times New Roman', serif;
-          text-align: left;
-        "
-      >
-        我们通过Illumina测序、PacBio技术和Hi-C（高通量染色体构象捕获）技术对高良姜的基因组进行了测序。使用Hifiasm和Khaper软件对基因组进行组装以及抛光，获得了2.44Gb大小的contig级别基因组，随后使用Hi-C数据进行染色体挂载最后，我们得到了包含24条染色体的高良姜染色体级基因组，contig N50为28.28Mb，scaffold N50为118.36Mb。比较基因组分析表明，高良姜和生姜于在约2200万年前发生了分化。
+      <p style="text-indent: 2em; text-align: left">
+        我们通过Illumina测序、PacBio技术和Hi-C（高通量染色体构象捕获）技术对高良姜的基因组进行了测序。使用Hifiasm和Khaper软件对基因组进行组装以及抛光，获得了2.44Gb大小的contig级别基因组，随后使用Hi-C数据进行染色体挂载最后，我们得到了包含24条染色体的高良姜染色体级基因组，contig
+        N50为28.28Mb，scaffold
+        N50为118.36Mb。比较基因组分析表明，高良姜和生姜于在约2200万年前发生了分化。
       </p>
-
-      <!-- 使用 flexbox 布局让图片并排 -->
-      <div class="image-row" style="display: flex; justify-content: center; align-items: center">
+      <div
+        class="image-row"
+        style="display: flex; justify-content: center; align-items: center"
+      >
         <img
           src="https://github.com/yuanlilong/ryan1/blob/main/files/circos.png?raw=true"
           alt="circos"
@@ -93,13 +106,85 @@
       "
     >
       <p>高良姜 Alpinia officinarum</p>
-      <a href="https://cbi.gxu.edu.cn"
-        >高良姜基因组链接</a
-      > <br /><br /> <!-- 添加空行用于分隔 -->
-  <!-- 添加PDF简历下载链接 -->
-  <a href="https://github.com/yuanlilong/ryan1/blob/main/files/%E8%A2%81%E5%97%A3%E9%9A%86%E7%A7%8B%E6%8B%9B%E7%AE%80%E5%8E%86.pdf" download="Leslie-Ryan-Resume.pdf"
-    >点击下载我的PDF简历</a
-  >
+      <a href="https://cbi.gxu.edu.cn">高良姜基因组链接</a> <br /><br />
+      <a
+        href="https://github.com/yuanlilong/ryan1/blob/main/files/%E8%A2%81%E5%97%A3%E9%9A%86%E7%A7%8B%E6%8B%9B%E7%AE%80%E5%8E%86.pdf"
+        download="Leslie-Ryan-Resume.pdf"
+        >点击下载我的PDF简历</a
+      >
+      <br /><br />
     </div>
+
+    <!-- 音乐播放器控制区 -->
+    <div style="position: fixed; left: 10px; top: 30px; width: 200px; :150 ">
+      <!-- 音乐播放按钮 -->
+      <button onclick="playNextSong()">播放歌曲</button>
+
+      <!-- 隐藏的音频播放器，设置较小的尺寸 -->
+      <audio
+        id="audioPlayer"
+        controls
+        style="width: 280px; height: 50px"
+      ></audio>
+
+      <!-- 歌曲选择下拉列表 -->
+      <select id="songList" onchange="playSelectedSong()">
+        <option value="">选择一首歌曲</option>
+        <option value="0">三浦透子, RADWIMPS - グランドエスケープ</option>
+        <option value="1">容祖儿 - 烟霞</option>
+        <option value="2">张国荣 - 红</option>
+        <option value="3">陈奕迅 - 告别娑婆</option>
+        <option value="4">Of Monsters And Men - Little Talks</option>
+        <option value="5">Junip - Far Away</option>
+        <option value="6">AGA, 陈奕迅 - Special One</option>
+        <option value="7">G.E.M. 邓紫棋 - 句号</option>
+        <option value="8">和田光司 - Butter-Fly</option>
+        <option value="9">宇多田ヒカル - First Love</option>
+        <option value="10">麦浚龙, 谢安琪 - 罗生门</option>
+        <option value="11">陈奕迅 - 陀飞轮</option>
+        <option value="12">陈奕迅 - 任我行</option>
+      </select>
+    </div>
+
+    <script>
+      // 定义你的MP3文件链接数组
+      const songs = [
+        "https://github.com/yuanlilong/ryan1/blob/main/music/%E4%B8%89%E6%B5%A6%E9%80%8F%E5%AD%90%2CRADWIMPS_-_%E3%82%B0%E3%83%A9%E3%83%B3%E3%83%89%E3%82%A8%E3%82%B9%E3%82%B1%E3%83%BC%E3%83%97_(Movie_edit).mp3?raw=true",
+        "https://github.com/yuanlilong/ryan1/blob/main/music/%E5%AE%B9%E7%A5%96%E5%84%BF_-_%E7%83%9F%E9%9C%9E.mp3?raw=true",
+        "https://github.com/yuanlilong/ryan1/blob/main/music/%E5%BC%A0%E5%9B%BD%E8%8D%A3_-_%E7%BA%A2.mp3?raw=true",
+        "https://github.com/yuanlilong/ryan1/blob/main/music/%E9%99%88%E5%A5%95%E8%BF%85_-_%E5%91%8A%E5%88%AB%E5%A8%91%E5%A9%86.mp3?raw=true",
+        "https://github.com/yuanlilong/ryan1/blob/main/music/Of_Monsters_And_Men_-_Little_Talks.mp3?raw=true",
+        "https://github.com/yuanlilong/ryan1/blob/main/music/Junip_-_Far_Away.mp3?raw=true",
+        "https://github.com/yuanlilong/ryan1/blob/main/music/AGA%2C%E9%99%88%E5%A5%95%E8%BF%85_-_Special_One.mp3?raw=true",
+        "https://github.com/yuanlilong/ryan1/blob/main/music/G.E.M.%E9%82%93%E7%B4%AB%E6%A3%8B_-_%E5%8F%A5%E5%8F%B7.mp3?raw=true",
+        "https://github.com/yuanlilong/ryan1/blob/main/music/%E5%92%8C%E7%94%B0%E5%85%89%E5%8F%B8%20-%20Butter-Fly.mp3?raw=true",
+        "https://github.com/yuanlilong/ryan1/blob/main/music/%E5%AE%87%E5%A4%9A%E7%94%B0%E3%83%92%E3%82%AB%E3%83%AB_-_First_Love.mp3?raw=true",
+        "https://github.com/yuanlilong/ryan1/blob/main/music/%E9%BA%A6%E6%B5%9A%E9%BE%99%2C%E8%B0%A2%E5%AE%89%E7%90%AA%20-%20%E7%BD%97%E7%94%9F%E9%97%A8.mp3?raw=true",
+        "https://github.com/yuanlilong/ryan1/blob/main/music/%E9%99%88%E5%A5%95%E8%BF%85_-_%E9%99%80%E9%A3%9E%E8%BD%AE.mp3?raw=true",
+        "https://github.com/yuanlilong/ryan1/blob/main/music/%E9%99%88%E5%A5%95%E8%BF%85_-_%E4%BB%BB%E6%88%91%E8%A1%8C.mp3?raw=true",
+      ];
+
+      // 播放选定的歌曲
+      function playSelectedSong() {
+        const songList = document.getElementById("songList");
+        const selectedSongIndex = songList.value;
+        if (selectedSongIndex !== "") {
+          const audioPlayer = document.getElementById("audioPlayer");
+          audioPlayer.src = songs[selectedSongIndex];
+          audioPlayer.style.display = "block";
+          audioPlayer.play();
+        }
+      }
+
+      // 播放下一首歌曲的函数
+      let currentSongIndex = -1;
+      function playNextSong() {
+        currentSongIndex = (currentSongIndex + 1) % songs.length;
+        const audioPlayer = document.getElementById("audioPlayer");
+        audioPlayer.src = songs[currentSongIndex];
+        audioPlayer.style.display = "block";
+        audioPlayer.play();
+      }
+    </script>
   </body>
 </html>
