--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         font-size: 12px;
       "
     >
-      <p>高良姜 Alpinia officinarum</p>
+      <p>高良姜 Alpinia officinarum 由于文章未发表，因此没有把所有的结果都展示，基因组链接会在文章发表后放出</p>
       <a href="https://cbi.gxu.edu.cn">高良姜基因组链接</a> <br /><br />
       <a
         href="https://github.com/yuanlilong/ryan1/blob/main/files/%E8%A2%81%E5%97%A3%E9%9A%86%E7%A7%8B%E6%8B%9B%E7%AE%80%E5%8E%86.pdf"
